fix no  wrap?

--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ header {
     border-radius: 2px;
     line-height: 30px;
     text-wrap: nowrap;
+    white-space: nowrap;
 }
 
 .collectivekinds {
